# Face-Rec

./: README.md
components/modules/camera/: who_camera.c
examples/human_face_recognition/lcd/: CMakeLists.txt  README.md
examples/human_face_recognition/lcd/.cache/clangd/index/: app_main.cpp.D9D9DA68D94D870B.idx  event_logic.cpp.10E46E259FFA68EA.idx  event_logic.hpp.57783A9A794996AF.idx  face_recognition_tool.cpp.B1FA177981B7C720.idx  face_recognition_tool.hpp.CA4517E8E479A42F.idx  http_server.cpp.ED70C6175B095E9A.idx  http_server.h.38CF82995E0E270D.idx  nvs_user_store.cpp.AD514B8CB5E39706.idx  nvs_user_store.h.765D1A647F8B96DB.idx
examples/human_face_recognition/lcd/components/: CMakeLists.txt
examples/human_face_recognition/lcd/components/lcd/: CMakeLists.txt
examples/human_face_recognition/lcd/components/modules/lcd/: CMakeLists.txt  logo_en_240x240_lcd.c  logo_en_240x240_lcd.h  who_lcd.c  who_lcd.h
examples/human_face_recognition/lcd/main/: CMakeLists.txt  app_main.cpp  event_logic.hpp  face_recognition_handler.hpp  face_recognition_tool.cpp  face_recognition_tool.hpp  http_server.cpp  http_server.h  index.html  nvs_user_store.cpp  nvs_user_store.h
